IAC/terraform/shared-vpc/4-router.tf
resource "google_compute_router" "router" {
  name    = "router"
  region  = local.region
  project = local.host_project_id
  network = google_compute_network.main.self_link
}
